fix: mobile broken style

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ html {
 
 body {
     overflow-x: hidden;
-    height: 100%;
+    position:absolute;
 }
 
 #root {
